[package]
name = "calculadora_penal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.28.0"
chrono = { version = "0.4.38", features = [] }
egui_extras = { version = "0.28.0", features = ["chrono", "datepicker"] }
